# comprehend

./: .gitignore  README.md  engineering.yaml  main.py  papers.yaml  pyproject.toml
.comprehend/papers/arxiv-1912-07372/: summary.json
.comprehend/papers/arxiv-2103-14030/: summary.json
.comprehend/papers/arxiv-2205-06230/: summary.json
.comprehend/papers/arxiv-2408-00714/: summary.json
.comprehend/papers/arxiv-2410-24164/: summary.json
.comprehend/papers/arxiv-2603-19312/: summary.json
.comprehend/papers/deep-marching-cubes-cvpr-2018/: summary.json
.cursor/automations/: daily-engineering-summary.prompt.md  daily-paper-summary.prompt.md
.cursor/skills/comprehend-concept/: SKILL.md
comprehend/: __init__.py  cli.py  prepare.py  queue.py  util.py
comprehend/concept/: __init__.py  linkify.py  prepare.py  references.py  refs.py  render.py  schema.py  triage.py
comprehend/engineering/: __init__.py  extract.py  fetch.py  prepare.py  queue.py  schema.py  tags.py
comprehend/pdf/: __init__.py  download.py  extract.py  figures.py
comprehend/publish/: __init__.py  github_wiki.py
comprehend/pwc/: __init__.py  client.py  import_queue.py  models.py
comprehend/render/: __init__.py  engineering_visuals.py  extract_figure.py  manim_render.py  mermaid_render.py  visuals.py
comprehend/summary/: __init__.py  schema.py  tags.py
tests/: test_concept.py  test_concept_references.py  test_engineering_queue.py  test_engineering_schema.py  test_github_wiki.py  test_pdf_extract.py  test_pdf_figures.py  test_pwc.py  test_queue.py  test_summary.py  test_tags.py
(+2 files in other folders)
