[project]
name = "comprehend"
version = "0.1.0"
description = "Agent-native library for ML paper summaries with visuals, published to GitHub wiki"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.0",
    "click>=8.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pymupdf>=1.25.0",
    "pyyaml>=6.0.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
manim = [
    "manim>=0.19.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
comprehend = "comprehend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comprehend"]
